# ros2-shit

./: .gitignore
src/arm_controller/: package.xml  setup.py
src/arm_controller/arm_controller/: arm_gui.py  kinematics.py  pick_and_place_server.py  serial_bridge.py  trajectory_publisher.py
src/arm_description/: CMakeLists.txt  package.xml
src/arm_description/launch/: display.launch.py  gazebo.launch.py
src/arm_description/urdf/: arm.urdf
src/arm_interfaces/: CMakeLists.txt  package.xml
src/arm_interfaces/action/: PickAndPlace.action
src/my_cpp_pkg/: package.xml
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: __init__.py  my_first_node.py  robot_news_station.py
src/turtle_control/: package.xml  setup.py
src/turtle_control/turtle_control/: square_drawer.py
src/turtle_interfaces/: CMakeLists.txt  package.xml
src/turtle_interfaces/srv/: DrawSquare.srv
