<?xml version="1.0"?>
<package format="3">
  <name>arm_controller</name>
  <version>0.0.1</version>
  <description>Arm trajectory publisher node</description>
  <maintainer email="moamen@email.com">Moamen</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>