<?xml version="1.0"?>
<package format="3">
  <name>arm_interfaces</name>
  <version>0.0.1</version>
  <description>Custom action interfaces for arm</description>
  <maintainer email="stupidgambino@gmail.com">Moamen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>